# quasiqueue

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: black.yaml  dapperdata.yaml  isort.yaml  mypy.yaml  pypi.yaml  pytest.yaml  ruff.yaml
quasiqueue/: __init__.py  builder.py  cli.py  reader.py  runner.py  settings.py
tests/: test_backoff.py  test_multi_queue.py  test_quasiqueue.py  test_settings.py  utils.py
