[metadata]
name = quasiqueue
description = A Simple High Performance Multiprocess Queue
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = quasiqueue/_version.py
versionfile_build = quasiqueue/_version.py
tag_prefix = v

parentdir_prefix =

[options]
packages = find:
include_package_data = True
install_requires =
  psutil
  pydantic
  typer

[options.extras_require]
dev =
  black
  build
  dapperdata
  glom
  isort
  mypy
  pytest
  pytest-cov
  pytest-pretty
  ruamel.yaml
  types-psutil

[options.package_data]
quasiqueue = py.typed


[options.entry_points]
console_scripts =
  quasiqueue = quasiqueue.cli:app

